@@ -1,8 +1,8 @@
 # Extended Module Player Makefile.rules.in
-# $Id: Makefile.rules.in,v 1.46 2007-10-10 23:49:38 cmatsuoka Exp $
+# $Id: Makefile.rules.in,v 1.47 2007-10-14 21:44:59 cmatsuoka Exp $
 
 VERSION		= 2.4.0-pre1
-DATE		= Tue Oct  9 07:45:59 BRT 2007
+DATE		= Fri Oct 12 01:47:30 BRT 2007
 
 DESTDIR		=
 prefix		= @prefix@
