@@ -1,7 +1,7 @@
 /* Extended Module Player
  * Copyright (C) 1996-2007 Claudio Matsuoka and Hipolito Carraro Jr
  *
- * $Id: control.c,v 1.13 2007-10-05 01:49:17 cmatsuoka Exp $
+ * $Id: control.c,v 1.14 2007-10-14 21:44:59 cmatsuoka Exp $
  *
  * This file is part of the Extended Module Player and is distributed
  * under the terms of the GNU General Public License. See doc/COPYING
@@ -36,11 +36,11 @@ void xmp_init_callback(struct xmp_control *ctl, void (*callback)(void *, int))
     xmp_drv_register(&drv_callback);
     xmp_init_formats();
     pw_init();
-    xmp_register_driver_callback (callback);
+    xmp_register_driver_callback(callback);
     ctl->drv_id = "callback";
 }
 
-void xmp_init (int argc, char **argv, struct xmp_control *ctl)
+void xmp_init(int argc, char **argv, struct xmp_control *ctl)
 {
     int num;
     uint16 w;
